removed padding from survey-question, added right margin to the button section to fix stacking,changd font color of task label for better readability, extended medium font to the task details.

--- a/src/styles/taskreview/_question-container.scss
+++ b/src/styles/taskreview/_question-container.scss
@@ -3,6 +3,7 @@ $block-class:'question-container';
 @at-root {
     .#{$block-class} {
         border-bottom: 1px solid $border-color;
+        padding-left: 16px;
 
         &:last-child {
             border-width: 0;
