--- a/src/styles/taskreview/_survey-pane.scss
+++ b/src/styles/taskreview/_survey-pane.scss
@@ -12,7 +12,7 @@ $block-class:'survey-pane';
         }
 
         &__accordion-buttons {
-            margin-right: 16px;
+            margin-right: 8px;
         }
 
         &__button-expand {
